--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href= "css/styles.css" rel = "stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  
+    <title>To Do List</title>
+  
 </head>
-<body>
+<body class="container">
+  <div class="jumbotron">
+    <h1>To do list</h1>
+  </div>
+  <h2>Fill out the form below with tasks that need to be completed!</h2>
+  <form id="question" class="card">
+    <label for="task" class="card-body">Enter a task to be done: </label>
+    <input required id="item" type="text">
+
+    <button type="submit" class="btn btn-success"><em>Submit!</em></button>
+    <button type="submit" class="btn btn-danger"><em>remove!</em></button>
+  </form>
   
 </body>
-</html>
