it will get the array to populate into a list
Co-authored by: Forrest Reiland <freiland@email.arizona.edu>

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
 
     <button type="submit" class="btn btn-success"><em>Submit!</em></button>
   </form>
+  <h1>Here is your checklist:</h1>
+  <ul id=list></ul>
   
+  <button type="button" class="btn btn-danger" id="removeButton">remove completed items</button>
+
 </body>
